<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Đổi đầu số di động</string>
    <string name="about">Giới thiệu</string>
    <string name="about_description">"Bộ TT-TT vừa công bố chi tiết các đầu số thuê bao di động 11 số sẽ chuyển thành 10 số đến từ 5 nhà mạng gồm Mobifone, Viettel, Vinaphone, Vietnamobile và Gtel bắt đầu từ ngày 15/09/2018. Các nhà mạng lớn như Mobifone, Vinaphone, Viettel lần lượt có đầu số chuyển đổi mới là 07x, 08x và 03x, hai nhà mạng Vietnamobile và Gtel dùng chung đầu số 05x.
Việc chuyển đổi bắt đầu từ ngày 15/9/2018 và kết thúc vào ngày 30/6/2019. Khi tiến hành chuyển đổi các nhà mạng sẽ phải quay số song song từ ngày 15/9/2018 đến ngày 14/11/2018 và duy trì âm báo bằng tiếng Việt và tiếng Anh."</string>
    <string name="all_province">Cả nước</string>
    <string name="confirm_update">Bạn đã sao lưu danh bạ trước khi thực hiện thao tác này ?</string>
    <string name="no_contact">Không tìm thấy số điện thoại di động có mã mạng cần chuyển đổi</string>
    <string name="title">Đổi đầu số di động</string>
    <string name="title_revert">Đổi 10 số thành 11 số</string>
    <string name="menu_share">Chia sẽ</string>
    <string name="homepage">Trang chủ</string>
    <string name="update">Cập nhật</string>
    <string name="updated">Đã cập nhật </string>
    <string name="contact"> danh bạ</string>
    <string name="updating">Đang cập nhật </string>
    <string name="loading">Đang tải danh bạ </string>
    <string name="waiting">Vui lòng chờ trong giây lát</string>
    <string name="revert">Đổi lại</string>
    <string name="update_result_ok">Đã cập nhật danh bạ</string>
    <string name="notice">Chú ý</string>
    <string name="grant">Cấp quyền</string>
    <string name="grant_notice">Nếu bạn không cấp quyền ứng dụng sẽ thoát?</string>
    <string name="grant_exit">OK, Thoát</string>
    <string name="selected">Đã chọn </string>
    <string name="no_selected">Chưa có danh bạ nào được chọn</string>
    <string name="seleted_all">Chọn tất cả</string>
    <string name="file_name">mobile.json</string>
    <string name="list_code">Danh sách các nhà mạng</string>
    <string name="mobile_code">Mã mạng</string>
    <string name="search">Tìm kiếm</string>
    <string name="share">Chia sẽ</string>
    <string name="cant_share">Điện thoại của bạn không hỗ trợ chia sẽ</string>
    <string name="shareBody">Tải ứng dụng Đổi đầu số di động. Ứng dụng sẽ giúp bạn cập nhật tất cả số di động 11 số sang 10 số một cách nhanh chóng và thuận tiện nhất! https://play.google.com/store/apps/details?id=net.vnict.phonecode</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="version">Version 1.2.1</string>
</resources>
